--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 {
     height: 100vh;
     width:100%;
-    background-image: url(sky.jpg);
+    background-image: url(night.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -77,8 +77,8 @@
 }
 .wheel img
 {
-    width: 70px;
-    height: 70px;
+    width: 71px;
+    height: 71px;
     animation: wheel 1s linear infinite;
 }
 .back-wheel
